// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inputs/SelectVirtualized AutoSort smoke-test 1`] = `
<div class="MuiAutocomplete-root MuiAutocomplete-hasPopupIcon css-mui-classname"
     data-cy="select-outer-wrapper"
>
  <div class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root css-mui-classname"
       style="width: 100%;"
  >
    <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-mui-classname"
           data-shrink="false"
           for=":ra:"
           id=":ra:-label"
    >
      Select
    </label>
    <div class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiAutocomplete-inputRoot css-mui-classname">
      <input aria-invalid="false"
             autocomplete="off"
             id=":ra:"
             placeholder="Select a value"
             type="text"
             class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiAutocomplete-input MuiAutocomplete-inputFocused css-mui-classname"
             aria-autocomplete="both"
             aria-expanded="false"
             autocapitalize="none"
             spellcheck="false"
             role="combobox"
             data-cy="select"
             value
             style="width: 100%;"
      >
      <div class="MuiAutocomplete-endAdornment css-mui-classname">
        <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium MuiAutocomplete-popupIndicator css-mui-classname"
                tabindex="-1"
                type="button"
                aria-label="Open"
                title="Open"
        >
          <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
               focusable="false"
               aria-hidden="true"
               viewbox="0 0 24 24"
               data-testid="ArrowDropDownIcon"
          >
            <path d="M7 10l5 5 5-5z">
            </path>
          </svg>
        </button>
      </div>
      <fieldset aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-mui-classname"
      >
        <legend class="css-mui-classname">
          <span>
            Select
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`Inputs/SelectVirtualized Autocomplete play-test 1`] = `
<div class="MuiAutocomplete-root Mui-expanded Mui-focused MuiAutocomplete-hasPopupIcon css-mui-classname"
     data-cy="select-outer-wrapper"
>
  <div class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root css-mui-classname"
       style="width: 100%;"
  >
    <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled Mui-focused MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-mui-classname"
           data-shrink="true"
           for=":r4:"
           id=":r4:-label"
    >
      Select
    </label>
    <div class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth Mui-focused MuiInputBase-formControl MuiInputBase-adornedEnd MuiAutocomplete-inputRoot css-mui-classname">
      <input aria-invalid="false"
             autocomplete="off"
             id=":r4:"
             placeholder="Select a value"
             type="text"
             class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiAutocomplete-input MuiAutocomplete-inputFocused css-mui-classname"
             aria-autocomplete="list"
             aria-expanded="true"
             autocapitalize="none"
             spellcheck="false"
             role="combobox"
             data-cy="select"
             value="M"
             aria-controls=":r4:-listbox"
             style="width: 100%;"
      >
      <div class="MuiAutocomplete-endAdornment css-mui-classname">
        <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium MuiAutocomplete-popupIndicator MuiAutocomplete-popupIndicatorOpen css-mui-classname"
                tabindex="-1"
                type="button"
                aria-label="Close"
                title="Close"
        >
          <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
               focusable="false"
               aria-hidden="true"
               viewbox="0 0 24 24"
               data-testid="ArrowDropDownIcon"
          >
            <path d="M7 10l5 5 5-5z">
            </path>
          </svg>
        </button>
      </div>
      <fieldset aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-mui-classname"
      >
        <legend class="css-mui-classname">
          <span>
            Select
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`Inputs/SelectVirtualized AutocompleteChange play-test 1`] = `
<div class="MuiAutocomplete-root Mui-expanded Mui-focused MuiAutocomplete-hasPopupIcon css-mui-classname"
     data-cy="select-outer-wrapper"
>
  <div class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root css-mui-classname"
       style="width: 100%;"
  >
    <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled Mui-focused MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-mui-classname"
           data-shrink="true"
           for=":r7:"
           id=":r7:-label"
    >
      Select
    </label>
    <div class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth Mui-focused MuiInputBase-formControl MuiInputBase-adornedEnd MuiAutocomplete-inputRoot css-mui-classname">
      <input aria-invalid="false"
             autocomplete="off"
             id=":r7:"
             placeholder="Select a value"
             type="text"
             class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiAutocomplete-input MuiAutocomplete-inputFocused css-mui-classname"
             aria-autocomplete="list"
             aria-expanded="true"
             autocapitalize="none"
             spellcheck="false"
             role="combobox"
             data-cy="select"
             value="M"
             aria-controls=":r7:-listbox"
             style="width: 100%;"
      >
      <div class="MuiAutocomplete-endAdornment css-mui-classname">
        <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium MuiAutocomplete-popupIndicator MuiAutocomplete-popupIndicatorOpen css-mui-classname"
                tabindex="-1"
                type="button"
                aria-label="Close"
                title="Close"
        >
          <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
               focusable="false"
               aria-hidden="true"
               viewbox="0 0 24 24"
               data-testid="ArrowDropDownIcon"
          >
            <path d="M7 10l5 5 5-5z">
            </path>
          </svg>
        </button>
      </div>
      <fieldset aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-mui-classname"
      >
        <legend class="css-mui-classname">
          <span>
            Select
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`Inputs/SelectVirtualized Disabled smoke-test 1`] = `
<div class="MuiAutocomplete-root MuiAutocomplete-hasPopupIcon css-mui-classname"
     data-cy="select-outer-wrapper"
>
  <div class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root css-mui-classname"
       style="width: 100%;"
  >
    <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-disabled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-mui-classname"
           data-shrink="false"
           for=":rd:"
           id=":rd:-label"
    >
      Select
    </label>
    <div class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary Mui-disabled MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiAutocomplete-inputRoot css-mui-classname">
      <input aria-invalid="false"
             autocomplete="off"
             disabled
             id=":rd:"
             placeholder="Select a value"
             type="text"
             class="MuiInputBase-input MuiOutlinedInput-input Mui-disabled MuiInputBase-inputAdornedEnd MuiAutocomplete-input MuiAutocomplete-inputFocused css-mui-classname"
             aria-autocomplete="both"
             aria-expanded="false"
             autocapitalize="none"
             spellcheck="false"
             role="combobox"
             data-cy="select"
             value
             style="width: 100%;"
      >
      <div class="MuiAutocomplete-endAdornment css-mui-classname">
        <button class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium MuiAutocomplete-popupIndicator css-mui-classname"
                tabindex="-1"
                type="button"
                disabled
                aria-label="Open"
                title="Open"
        >
          <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
               focusable="false"
               aria-hidden="true"
               viewbox="0 0 24 24"
               data-testid="ArrowDropDownIcon"
          >
            <path d="M7 10l5 5 5-5z">
            </path>
          </svg>
        </button>
      </div>
      <fieldset aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-mui-classname"
      >
        <legend class="css-mui-classname">
          <span>
            Select
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`Inputs/SelectVirtualized Grouped play-test 1`] = `
<div class="MuiAutocomplete-root Mui-expanded Mui-focused MuiAutocomplete-hasPopupIcon css-mui-classname"
     data-cy="select-outer-wrapper"
>
  <div class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root css-mui-classname"
       style="width: 100%;"
  >
    <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-focused MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-mui-classname"
           data-shrink="true"
           for=":rg:"
           id=":rg:-label"
    >
      Select
    </label>
    <div class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth Mui-focused MuiInputBase-formControl MuiInputBase-adornedEnd MuiAutocomplete-inputRoot css-mui-classname">
      <input aria-invalid="false"
             autocomplete="off"
             id=":rg:"
             placeholder="Select a value"
             type="text"
             class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiAutocomplete-input MuiAutocomplete-inputFocused css-mui-classname"
             aria-autocomplete="both"
             aria-expanded="true"
             autocapitalize="none"
             spellcheck="false"
             role="combobox"
             data-cy="select"
             value
             aria-controls=":rg:-listbox"
             style="width: 100%;"
      >
      <div class="MuiAutocomplete-endAdornment css-mui-classname">
        <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium MuiAutocomplete-popupIndicator MuiAutocomplete-popupIndicatorOpen css-mui-classname"
                tabindex="-1"
                type="button"
                aria-label="Close"
                title="Close"
        >
          <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
               focusable="false"
               aria-hidden="true"
               viewbox="0 0 24 24"
               data-testid="ArrowDropDownIcon"
          >
            <path d="M7 10l5 5 5-5z">
            </path>
          </svg>
        </button>
      </div>
      <fieldset aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-mui-classname"
      >
        <legend class="css-mui-classname">
          <span>
            Select
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`Inputs/SelectVirtualized GroupedCustomLabel play-test 1`] = `
<div class="MuiAutocomplete-root Mui-expanded Mui-focused MuiAutocomplete-hasPopupIcon css-mui-classname"
     data-cy="select-outer-wrapper"
>
  <div class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root css-mui-classname"
       style="width: 100%;"
  >
    <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-focused MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-mui-classname"
           data-shrink="true"
           for=":rj:"
           id=":rj:-label"
    >
      Select
    </label>
    <div class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth Mui-focused MuiInputBase-formControl MuiInputBase-adornedEnd MuiAutocomplete-inputRoot css-mui-classname">
      <input aria-invalid="false"
             autocomplete="off"
             id=":rj:"
             placeholder="Select a value"
             type="text"
             class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiAutocomplete-input MuiAutocomplete-inputFocused css-mui-classname"
             aria-autocomplete="both"
             aria-expanded="true"
             autocapitalize="none"
             spellcheck="false"
             role="combobox"
             data-cy="select"
             value
             aria-controls=":rj:-listbox"
             style="width: 100%;"
      >
      <div class="MuiAutocomplete-endAdornment css-mui-classname">
        <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium MuiAutocomplete-popupIndicator MuiAutocomplete-popupIndicatorOpen css-mui-classname"
                tabindex="-1"
                type="button"
                aria-label="Close"
                title="Close"
        >
          <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
               focusable="false"
               aria-hidden="true"
               viewbox="0 0 24 24"
               data-testid="ArrowDropDownIcon"
          >
            <path d="M7 10l5 5 5-5z">
            </path>
          </svg>
        </button>
      </div>
      <fieldset aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-mui-classname"
      >
        <legend class="css-mui-classname">
          <span>
            Select
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`Inputs/SelectVirtualized Loading smoke-test 1`] = `
<div class="MuiAutocomplete-root MuiAutocomplete-hasPopupIcon css-mui-classname"
     data-cy="select-outer-wrapper"
>
  <span class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse MuiSkeleton-withChildren MuiSkeleton-heightAuto css-mui-classname"
        style="width: 100%;"
  >
    <div class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root css-mui-classname"
         style="width: 100%;"
    >
      <div class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiAutocomplete-inputRoot css-mui-classname">
        <input aria-invalid="false"
               autocomplete="off"
               id=":rm:"
               type="text"
               class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiAutocomplete-input MuiAutocomplete-inputFocused css-mui-classname"
               aria-autocomplete="both"
               aria-expanded="false"
               autocapitalize="none"
               spellcheck="false"
               role="combobox"
               data-cy="select-loading"
               value
               style="width: 100%;"
        >
        <div class="MuiAutocomplete-endAdornment css-mui-classname">
          <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium MuiAutocomplete-popupIndicator css-mui-classname"
                  tabindex="-1"
                  type="button"
                  aria-label="Open"
                  title="Open"
          >
            <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
                 focusable="false"
                 aria-hidden="true"
                 viewbox="0 0 24 24"
                 data-testid="ArrowDropDownIcon"
            >
              <path d="M7 10l5 5 5-5z">
              </path>
            </svg>
          </button>
        </div>
        <fieldset aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-mui-classname"
        >
          <legend class="css-mui-classname">
            <span class="notranslate"
                  aria-hidden="true"
            >
              ​
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
  </span>
</div>
`;

exports[`Inputs/SelectVirtualized Localized smoke-test 1`] = `
<div class="MuiAutocomplete-root MuiAutocomplete-hasPopupIcon css-mui-classname"
     data-cy="locale.select-outer-wrapper"
>
  <div class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root css-mui-classname"
       style="width: 100%;"
  >
    <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-mui-classname"
           data-shrink="false"
           for=":rp:"
           id=":rp:-label"
    >
      Menu a tendina
    </label>
    <div class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiAutocomplete-inputRoot css-mui-classname">
      <input aria-invalid="false"
             autocomplete="off"
             id=":rp:"
             placeholder="Inserire valore..."
             type="text"
             class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiAutocomplete-input MuiAutocomplete-inputFocused css-mui-classname"
             aria-autocomplete="both"
             aria-expanded="false"
             autocapitalize="none"
             spellcheck="false"
             role="combobox"
             data-cy="locale.select"
             value
             style="width: 100%;"
      >
      <div class="MuiAutocomplete-endAdornment css-mui-classname">
        <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium MuiAutocomplete-popupIndicator css-mui-classname"
                tabindex="-1"
                type="button"
                aria-label="Open"
                title="Open"
        >
          <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
               focusable="false"
               aria-hidden="true"
               viewbox="0 0 24 24"
               data-testid="ArrowDropDownIcon"
          >
            <path d="M7 10l5 5 5-5z">
            </path>
          </svg>
        </button>
      </div>
      <fieldset aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-mui-classname"
      >
        <legend class="css-mui-classname">
          <span>
            Menu a tendina
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`Inputs/SelectVirtualized Multiple play-test 1`] = `
<div class="MuiAutocomplete-root Mui-expanded Mui-focused MuiAutocomplete-hasClearIcon MuiAutocomplete-hasPopupIcon css-mui-classname"
     data-cy="select-outer-wrapper"
>
  <div class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root css-mui-classname"
       style="width: 100%;"
  >
    <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-focused MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-mui-classname"
           data-shrink="true"
           for=":rs:"
           id=":rs:-label"
    >
      Select
    </label>
    <div class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth Mui-focused MuiInputBase-formControl MuiInputBase-adornedStart MuiInputBase-adornedEnd MuiAutocomplete-inputRoot css-mui-classname">
      <div class="MuiButtonBase-root MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-deletable MuiChip-deletableColorDefault MuiChip-filledDefault MuiAutocomplete-tag MuiAutocomplete-tagSizeMedium css-mui-classname"
           tabindex="-1"
           role="button"
           data-tag-index="0"
      >
        <span class="MuiChip-label MuiChip-labelMedium css-mui-classname">
          Sculpture
        </span>
        <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-deleteIcon MuiChip-deleteIconMedium MuiChip-deleteIconColorDefault MuiChip-deleteIconFilledColorDefault css-mui-classname"
             focusable="false"
             aria-hidden="true"
             viewbox="0 0 24 24"
             data-testid="CancelIcon"
        >
          <path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z">
          </path>
        </svg>
      </div>
      <input aria-invalid="false"
             autocomplete="off"
             id=":rs:"
             placeholder="Select a value"
             type="text"
             class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiInputBase-inputAdornedEnd MuiAutocomplete-input MuiAutocomplete-inputFocused css-mui-classname"
             aria-autocomplete="both"
             aria-expanded="true"
             autocapitalize="none"
             spellcheck="false"
             role="combobox"
             data-cy="select"
             value
             aria-controls=":rs:-listbox"
             style="width: 100%;"
      >
      <div class="MuiAutocomplete-endAdornment css-mui-classname">
        <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium MuiAutocomplete-clearIndicator css-mui-classname"
                tabindex="-1"
                type="button"
                aria-label="Clear"
                title="Clear"
        >
          <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-mui-classname"
               focusable="false"
               aria-hidden="true"
               viewbox="0 0 24 24"
               data-testid="CloseIcon"
          >
            <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z">
            </path>
          </svg>
        </button>
        <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium MuiAutocomplete-popupIndicator MuiAutocomplete-popupIndicatorOpen css-mui-classname"
                tabindex="-1"
                type="button"
                aria-label="Close"
                title="Close"
        >
          <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
               focusable="false"
               aria-hidden="true"
               viewbox="0 0 24 24"
               data-testid="ArrowDropDownIcon"
          >
            <path d="M7 10l5 5 5-5z">
            </path>
          </svg>
        </button>
      </div>
      <fieldset aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-mui-classname"
      >
        <legend class="css-mui-classname">
          <span>
            Select
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`Inputs/SelectVirtualized OnScrollEndCallback play-test 1`] = `
<div class="MuiAutocomplete-root Mui-expanded Mui-focused MuiAutocomplete-hasPopupIcon css-mui-classname"
     data-cy="select-outer-wrapper"
>
  <div class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root css-mui-classname"
       style="width: 100%;"
  >
    <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-focused MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-mui-classname"
           data-shrink="true"
           for=":r10:"
           id=":r10:-label"
    >
      Select
    </label>
    <div class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth Mui-focused MuiInputBase-formControl MuiInputBase-adornedEnd MuiAutocomplete-inputRoot css-mui-classname">
      <input aria-invalid="false"
             autocomplete="off"
             id=":r10:"
             placeholder="Select a value"
             type="text"
             class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiAutocomplete-input MuiAutocomplete-inputFocused css-mui-classname"
             aria-autocomplete="both"
             aria-expanded="true"
             autocapitalize="none"
             spellcheck="false"
             role="combobox"
             data-cy="select"
             value
             aria-controls=":r10:-listbox"
             style="width: 100%;"
      >
      <div class="MuiAutocomplete-endAdornment css-mui-classname">
        <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium MuiAutocomplete-popupIndicator MuiAutocomplete-popupIndicatorOpen css-mui-classname"
                tabindex="-1"
                type="button"
                aria-label="Close"
                title="Close"
        >
          <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
               focusable="false"
               aria-hidden="true"
               viewbox="0 0 24 24"
               data-testid="ArrowDropDownIcon"
          >
            <path d="M7 10l5 5 5-5z">
            </path>
          </svg>
        </button>
      </div>
      <fieldset aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-mui-classname"
      >
        <legend class="css-mui-classname">
          <span>
            Select
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`Inputs/SelectVirtualized OptionCustomLabel play-test 1`] = `
<div class="MuiAutocomplete-root Mui-expanded Mui-focused MuiAutocomplete-hasPopupIcon css-mui-classname"
     data-cy="select-outer-wrapper"
>
  <div class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root css-mui-classname"
       style="width: 100%;"
  >
    <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-focused MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-mui-classname"
           data-shrink="true"
           for=":r13:"
           id=":r13:-label"
    >
      Select
    </label>
    <div class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth Mui-focused MuiInputBase-formControl MuiInputBase-adornedEnd MuiAutocomplete-inputRoot css-mui-classname">
      <input aria-invalid="false"
             autocomplete="off"
             id=":r13:"
             placeholder="Select a value"
             type="text"
             class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiAutocomplete-input MuiAutocomplete-inputFocused css-mui-classname"
             aria-autocomplete="both"
             aria-expanded="true"
             autocapitalize="none"
             spellcheck="false"
             role="combobox"
             data-cy="select"
             value
             aria-controls=":r13:-listbox"
             style="width: 100%;"
      >
      <div class="MuiAutocomplete-endAdornment css-mui-classname">
        <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium MuiAutocomplete-popupIndicator MuiAutocomplete-popupIndicatorOpen css-mui-classname"
                tabindex="-1"
                type="button"
                aria-label="Close"
                title="Close"
        >
          <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
               focusable="false"
               aria-hidden="true"
               viewbox="0 0 24 24"
               data-testid="ArrowDropDownIcon"
          >
            <path d="M7 10l5 5 5-5z">
            </path>
          </svg>
        </button>
      </div>
      <fieldset aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-mui-classname"
      >
        <legend class="css-mui-classname">
          <span>
            Select
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`Inputs/SelectVirtualized OptionCustomRendering play-test 1`] = `
<div class="MuiAutocomplete-root Mui-expanded Mui-focused MuiAutocomplete-hasPopupIcon css-mui-classname"
     data-cy="select-outer-wrapper"
>
  <div class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root css-mui-classname"
       style="width: 100%;"
  >
    <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-focused MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-mui-classname"
           data-shrink="true"
           for=":r16:"
           id=":r16:-label"
    >
      Select
    </label>
    <div class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth Mui-focused MuiInputBase-formControl MuiInputBase-adornedEnd MuiAutocomplete-inputRoot css-mui-classname">
      <input aria-invalid="false"
             autocomplete="off"
             id=":r16:"
             placeholder="Select a value"
             type="text"
             class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiAutocomplete-input MuiAutocomplete-inputFocused css-mui-classname"
             aria-autocomplete="both"
             aria-expanded="true"
             autocapitalize="none"
             spellcheck="false"
             role="combobox"
             data-cy="select"
             value
             aria-controls=":r16:-listbox"
             style="width: 100%;"
      >
      <div class="MuiAutocomplete-endAdornment css-mui-classname">
        <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium MuiAutocomplete-popupIndicator MuiAutocomplete-popupIndicatorOpen css-mui-classname"
                tabindex="-1"
                type="button"
                aria-label="Close"
                title="Close"
        >
          <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
               focusable="false"
               aria-hidden="true"
               viewbox="0 0 24 24"
               data-testid="ArrowDropDownIcon"
          >
            <path d="M7 10l5 5 5-5z">
            </path>
          </svg>
        </button>
      </div>
      <fieldset aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-mui-classname"
      >
        <legend class="css-mui-classname">
          <span>
            Select
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`Inputs/SelectVirtualized Primary play-test 1`] = `
<div class="MuiAutocomplete-root Mui-focused MuiAutocomplete-hasClearIcon MuiAutocomplete-hasPopupIcon css-mui-classname"
     data-cy="select-outer-wrapper"
>
  <div class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root css-mui-classname"
       style="width: 100%;"
  >
    <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled Mui-focused MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-mui-classname"
           data-shrink="true"
           for=":r0:"
           id=":r0:-label"
    >
      Select
    </label>
    <div class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth Mui-focused MuiInputBase-formControl MuiInputBase-adornedEnd MuiAutocomplete-inputRoot css-mui-classname">
      <input aria-invalid="false"
             autocomplete="off"
             id=":r0:"
             placeholder="Select a value"
             type="text"
             class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiAutocomplete-input MuiAutocomplete-inputFocused css-mui-classname"
             aria-autocomplete="both"
             aria-expanded="false"
             autocapitalize="none"
             spellcheck="false"
             role="combobox"
             data-cy="select"
             value="Sculpture"
             style="width: 100%;"
      >
      <div class="MuiAutocomplete-endAdornment css-mui-classname">
        <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium MuiAutocomplete-clearIndicator css-mui-classname"
                tabindex="-1"
                type="button"
                aria-label="Clear"
                title="Clear"
        >
          <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-mui-classname"
               focusable="false"
               aria-hidden="true"
               viewbox="0 0 24 24"
               data-testid="CloseIcon"
          >
            <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z">
            </path>
          </svg>
        </button>
        <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium MuiAutocomplete-popupIndicator css-mui-classname"
                tabindex="-1"
                type="button"
                aria-label="Open"
                title="Open"
        >
          <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
               focusable="false"
               aria-hidden="true"
               viewbox="0 0 24 24"
               data-testid="ArrowDropDownIcon"
          >
            <path d="M7 10l5 5 5-5z">
            </path>
          </svg>
        </button>
      </div>
      <fieldset aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-mui-classname"
      >
        <legend class="css-mui-classname">
          <span>
            Select
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`Inputs/SelectVirtualized Required smoke-test 1`] = `
<div class="MuiAutocomplete-root MuiAutocomplete-hasPopupIcon css-mui-classname"
     data-cy="select-outer-wrapper"
>
  <div class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root css-mui-classname"
       style="width: 100%;"
  >
    <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-mui-classname"
           data-shrink="false"
           for=":r19:"
           id=":r19:-label"
    >
      Select
      <span aria-hidden="true"
            class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-mui-classname"
      >
         *
      </span>
    </label>
    <div class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiAutocomplete-inputRoot css-mui-classname">
      <input aria-invalid="false"
             autocomplete="off"
             id=":r19:"
             placeholder="Select a value"
             required
             type="text"
             class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiAutocomplete-input MuiAutocomplete-inputFocused css-mui-classname"
             aria-autocomplete="both"
             aria-expanded="false"
             autocapitalize="none"
             spellcheck="false"
             role="combobox"
             data-cy="select"
             value
             style="width: 100%;"
      >
      <div class="MuiAutocomplete-endAdornment css-mui-classname">
        <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium MuiAutocomplete-popupIndicator css-mui-classname"
                tabindex="-1"
                type="button"
                aria-label="Open"
                title="Open"
        >
          <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
               focusable="false"
               aria-hidden="true"
               viewbox="0 0 24 24"
               data-testid="ArrowDropDownIcon"
          >
            <path d="M7 10l5 5 5-5z">
            </path>
          </svg>
        </button>
      </div>
      <fieldset aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-mui-classname"
      >
        <legend class="css-mui-classname">
          <span>
            Select *
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`Inputs/SelectVirtualized SizeSmall smoke-test 1`] = `
<div class="MuiAutocomplete-root MuiAutocomplete-hasPopupIcon css-mui-classname"
     data-cy="select-outer-wrapper"
>
  <div class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root css-mui-classname"
       style="width: 100%;"
  >
    <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined css-mui-classname"
           data-shrink="false"
           for=":r1c:"
           id=":r1c:-label"
    >
      Select
    </label>
    <div class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-sizeSmall MuiInputBase-adornedEnd MuiAutocomplete-inputRoot css-mui-classname">
      <input aria-invalid="false"
             autocomplete="off"
             id=":r1c:"
             placeholder="Select a value"
             type="text"
             class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall MuiInputBase-inputAdornedEnd MuiAutocomplete-input MuiAutocomplete-inputFocused css-mui-classname"
             aria-autocomplete="both"
             aria-expanded="false"
             autocapitalize="none"
             spellcheck="false"
             role="combobox"
             data-cy="select"
             value
             style="width: 100%;"
      >
      <div class="MuiAutocomplete-endAdornment css-mui-classname">
        <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium MuiAutocomplete-popupIndicator css-mui-classname"
                tabindex="-1"
                type="button"
                aria-label="Open"
                title="Open"
        >
          <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
               focusable="false"
               aria-hidden="true"
               viewbox="0 0 24 24"
               data-testid="ArrowDropDownIcon"
          >
            <path d="M7 10l5 5 5-5z">
            </path>
          </svg>
        </button>
      </div>
      <fieldset aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-mui-classname"
      >
        <legend class="css-mui-classname">
          <span>
            Select
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`Inputs/SelectVirtualized Styled smoke-test 1`] = `
<div class="MuiAutocomplete-root MuiAutocomplete-hasPopupIcon css-mui-classname"
     data-cy="select-outer-wrapper"
>
  <div class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root css-mui-classname"
       style="color: red; font-weight: bold; font-size: large; text-align: center; width: 100%;"
  >
    <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-mui-classname"
           data-shrink="false"
           for=":r1f:"
           id=":r1f:-label"
    >
      Select
    </label>
    <div class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiAutocomplete-inputRoot css-mui-classname">
      <input aria-invalid="false"
             autocomplete="off"
             id=":r1f:"
             placeholder="Select a value"
             type="text"
             class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiAutocomplete-input MuiAutocomplete-inputFocused css-mui-classname"
             aria-autocomplete="both"
             aria-expanded="false"
             autocapitalize="none"
             spellcheck="false"
             role="combobox"
             data-cy="select"
             value
             style="color: red; font-weight: bold; font-size: large; text-align: center; width: 100%;"
      >
      <div class="MuiAutocomplete-endAdornment css-mui-classname">
        <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium MuiAutocomplete-popupIndicator css-mui-classname"
                tabindex="-1"
                type="button"
                aria-label="Open"
                title="Open"
        >
          <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
               focusable="false"
               aria-hidden="true"
               viewbox="0 0 24 24"
               data-testid="ArrowDropDownIcon"
          >
            <path d="M7 10l5 5 5-5z">
            </path>
          </svg>
        </button>
      </div>
      <fieldset aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-mui-classname"
      >
        <legend class="css-mui-classname">
          <span>
            Select
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`Inputs/SelectVirtualized VariantFilled smoke-test 1`] = `
<div class="MuiAutocomplete-root MuiAutocomplete-hasPopupIcon css-mui-classname"
     data-cy="select-outer-wrapper"
>
  <div class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root css-mui-classname"
       style="width: 100%;"
  >
    <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-filled MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-filled css-mui-classname"
           data-shrink="false"
           for=":r1i:"
           id=":r1i:-label"
    >
      Select
    </label>
    <div class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiFilledInput-adornedEnd MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiAutocomplete-inputRoot css-mui-classname">
      <input aria-invalid="false"
             autocomplete="off"
             id=":r1i:"
             placeholder="Select a value"
             type="text"
             class="MuiInputBase-input MuiFilledInput-input MuiInputBase-inputAdornedEnd MuiAutocomplete-input MuiAutocomplete-inputFocused css-mui-classname"
             aria-autocomplete="both"
             aria-expanded="false"
             autocapitalize="none"
             spellcheck="false"
             role="combobox"
             data-cy="select"
             value
             style="width: 100%;"
      >
      <div class="MuiAutocomplete-endAdornment css-mui-classname">
        <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium MuiAutocomplete-popupIndicator css-mui-classname"
                tabindex="-1"
                type="button"
                aria-label="Open"
                title="Open"
        >
          <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
               focusable="false"
               aria-hidden="true"
               viewbox="0 0 24 24"
               data-testid="ArrowDropDownIcon"
          >
            <path d="M7 10l5 5 5-5z">
            </path>
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Inputs/SelectVirtualized VariantStandard smoke-test 1`] = `
<div class="MuiAutocomplete-root MuiAutocomplete-hasPopupIcon css-mui-classname"
     data-cy="select-outer-wrapper"
>
  <div class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root css-mui-classname"
       style="width: 100%;"
  >
    <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-standard MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-standard css-mui-classname"
           data-shrink="false"
           for=":r1l:"
           id=":r1l:-label"
    >
      Select
    </label>
    <div class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiAutocomplete-inputRoot css-mui-classname">
      <input aria-invalid="false"
             autocomplete="off"
             id=":r1l:"
             placeholder="Select a value"
             type="text"
             class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd MuiAutocomplete-input MuiAutocomplete-inputFocused css-mui-classname"
             aria-autocomplete="both"
             aria-expanded="false"
             autocapitalize="none"
             spellcheck="false"
             role="combobox"
             data-cy="select"
             value
             style="width: 100%;"
      >
      <div class="MuiAutocomplete-endAdornment css-mui-classname">
        <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium MuiAutocomplete-popupIndicator css-mui-classname"
                tabindex="-1"
                type="button"
                aria-label="Open"
                title="Open"
        >
          <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
               focusable="false"
               aria-hidden="true"
               viewbox="0 0 24 24"
               data-testid="ArrowDropDownIcon"
          >
            <path d="M7 10l5 5 5-5z">
            </path>
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Inputs/SelectVirtualized VirtualizedWith1000Elements play-test 1`] = `
<div class="MuiAutocomplete-root Mui-expanded Mui-focused MuiAutocomplete-hasPopupIcon css-mui-classname"
     data-cy="select-outer-wrapper"
>
  <div class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root css-mui-classname"
       style="width: 100%;"
  >
    <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-focused MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-mui-classname"
           data-shrink="true"
           for=":r1o:"
           id=":r1o:-label"
    >
      Select
    </label>
    <div class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth Mui-focused MuiInputBase-formControl MuiInputBase-adornedEnd MuiAutocomplete-inputRoot css-mui-classname">
      <input aria-invalid="false"
             autocomplete="off"
             id=":r1o:"
             placeholder="Select a value"
             type="text"
             class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiAutocomplete-input MuiAutocomplete-inputFocused css-mui-classname"
             aria-autocomplete="both"
             aria-expanded="true"
             autocapitalize="none"
             spellcheck="false"
             role="combobox"
             data-cy="select"
             value
             aria-controls=":r1o:-listbox"
             style="width: 100%;"
      >
      <div class="MuiAutocomplete-endAdornment css-mui-classname">
        <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium MuiAutocomplete-popupIndicator MuiAutocomplete-popupIndicatorOpen css-mui-classname"
                tabindex="-1"
                type="button"
                aria-label="Close"
                title="Close"
        >
          <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
               focusable="false"
               aria-hidden="true"
               viewbox="0 0 24 24"
               data-testid="ArrowDropDownIcon"
          >
            <path d="M7 10l5 5 5-5z">
            </path>
          </svg>
        </button>
      </div>
      <fieldset aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-mui-classname"
      >
        <legend class="css-mui-classname">
          <span>
            Select
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;
